--- a/gallerie.html
+++ b/gallerie.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Novaks evil lair</title>
+    <title>Novaks Zeichnungen</title>
     <meta name="description" content="Kurzbeschreibung" />
 
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
       rel="stylesheet"
     />
-    <link href="persona.css" rel="stylesheet" />
+    <link href="gallerie.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -23,18 +23,15 @@
       </nav>
     </header>
     <div class="content-container">
-      <span><h1>Novak Djuric</h1></span>
-      <img src="./novak1.png" alt="Nobak" class="novak1" />
-      <ul>
-        <li>Alter: 16</li>
-        <li>Geburtsort: Herisau, Schweiz</li>
-        <li>Beruf: Applikationsentwickler</li>
-        <li>Betrieb: Bbc St.Gallen</li>
-      </ul>
-      <p>
-        Seit 16 Jahre bin ich schon in der Schweiz aufgewachsen, momentan
-        Arbeite ich als Applikationsentwickler im Bbc Basislehrjahr.
-      </p>
+      <h1 class="metal">Gallerie</h1>
+      <div class="griddy">
+        <img src="./gallerie/cake.png" alt="Nobak" class="novak1" />
+        <img src="./gallerie/ice.png" alt="Nobak" class="novak1" />
+        <img src="./gallerie/mellw.png" alt="Nobak" class="novak1" />
+        <img src="./gallerie/naval.png" alt="Nobak" class="novak1" />
+        <img src="./gallerie/schaf.png" alt="Nobak" class="novak1" />
+        <img src="./gallerie/smal.png" alt="Nobak" class="novak1" />
+      </div>
     </div>
   </body>
 </html>
