--- a/gallerie.html
+++ b/gallerie.html
@@ -25,12 +25,28 @@
     <div class="content-container">
       <h1 class="metal">Gallerie</h1>
       <div class="griddy">
-        <img src="./gallerie/cake.png" alt="Nobak" class="novak1" />
+        <img src="./gallerie/cake.webp" alt="Cake boy" class="novak1" />
         <img src="./gallerie/ice.png" alt="Nobak" class="novak1" />
-        <img src="./gallerie/mellw.png" alt="Nobak" class="novak1" />
-        <img src="./gallerie/naval.png" alt="Nobak" class="novak1" />
-        <img src="./gallerie/schaf.png" alt="Nobak" class="novak1" />
-        <img src="./gallerie/smal.png" alt="Nobak" class="novak1" />
+        <img src="./gallerie/mellw.png" alt="Bro is so cooked" class="novak1" />
+        <img src="./gallerie/naval.png" alt="Naval cake pop" class="novak1" />
+        <img src="./gallerie/schaf.png" alt="Donnerschaf" class="novak1" />
+        <img src="./gallerie/smal.webp" alt="creamy boy small" class="novak1" />
+        <img
+          src="./gallerie/Aerod.webp"
+          alt="Compact creamy boy"
+          class="novak1"
+        />
+        <img
+          src="./gallerie/smallCake.webp"
+          alt="Small cake boy"
+          class="novak1"
+        />
+        <img src="./gallerie/taiws.webp" alt="Creamy boy V" class="novak1" />
+        <img src="./gallerie/bat.webp" alt="bat creamy boy" class="novak1" />
+        <video width="320" height="240" controls>
+          <source src="./gallerie/Btd5.mp4" type="video/mp4" />
+          Your browser doesnt want to support this video type :skull:
+        </video>
       </div>
     </div>
   </body>
