--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       </ul>
       <p>
         Seit 16 Jahre bin ich schon in der Schweiz aufgewachsen, momentan
-        Arbeite ich als Applikationsentwickler im Bbc Basislehrjahr.
+        Arbeite ich als<br />
+        Applikationsentwickler im Bbc Basislehrjahr.
       </p>
     </div>
   </body>
