--- a/faehigkeiten.html
+++ b/faehigkeiten.html
@@ -29,24 +29,28 @@
         <img src="./images/novak2.png" alt="Nobak" class="novak1" />
         <img src="./images/novak3.png" alt="Nobak" class="novak1" />
         <img src="./images/garden.png" alt="Nobak" class="novak1" />
+
+        <ul>
+          <li>Englisch reden</li>
+          <li>Ping Pong spielen</li>
+          <li>Fitness Studio</li>
+          <li>Zeichnen.Gallen</li>
+        </ul>
       </div>
-      <ul>
-        <li>Englisch reden</li>
-        <li>Ping Pong spielen</li>
-        <li>Fitness Studio</li>
-        <li>Zeichnen.Gallen</li>
-      </ul>
+
       <p>
         Ich konnte schon seit einer langen Zeit gut Englisch reden, momentan
-        würde ich sagen dass ich es sogar besser als Deutsch kann. Ping Pong ist
-        relativ ein neuer Hobby, wir spielen es immer im Betrieb wenn wir Pause
-        haben, ich bin nicht so gut darin, aber ich habe trotzdem sehr viel
-        Spass dabei. Ich gehe ins Fitness Studio seit 2 Jahren, ich bin stolz
-        auf wie viel Fortschritt ich in den Jahren gemacht habe, jetzt gehe ich
-        viel weniger ins Studio wegen der Schule, aber ich versuche trotzdem so
-        viel wie möglich dort zu gehen. Am meisten gefällt mir Zeichnen, ich
-        habe in der ersten Sek angefangen mir Zeichnen, des Fortschritt war und
-        ist Massiv, in der Gallerie befinden sich meine neueren Zeichnungen.
+        würde ich sagen dass ich es sogar besser als Deutsch kann.<br /><br />
+        Ping Pong ist relativ ein neuer Hobby, wir spielen es immer im Betrieb
+        wenn wir Pause haben, ich bin nicht so gut darin, aber ich habe trotzdem
+        sehr viel Spass dabei.<br /><br />
+        Ich gehe ins Fitness Studio seit 2 Jahren, ich bin stolz auf wie viel
+        Fortschritt ich in den Jahren gemacht habe, jetzt gehe ich viel weniger
+        ins Studio wegen der Schule, aber ich versuche trotzdem so viel wie
+        möglich dort zu gehen.<br /><br />
+        Am meisten gefällt mir Zeichnen, ich habe in der ersten Sek angefangen
+        mir Zeichnen, des Fortschritt war und ist Massiv, in der Gallerie
+        befinden sich meine neueren Zeichnungen.
       </p>
     </div>
   </body>
