--- a/gallerie.html
+++ b/gallerie.html
@@ -25,6 +25,7 @@
     <div class="content-container">
       <h1 class="metal">Gallerie</h1>
       <div class="griddy">
+        <!-- Hier sind all die gerichteten bilder -->
         <img src="./gallerie/cake.webp" alt="Cake boy" class="novak1" />
         <img src="./gallerie/ice.png" alt="Nobak" class="novak1" />
         <img src="./gallerie/mellw.png" alt="Bro is so cooked" class="novak1" />
