--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Hier ist die Haut Seite -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,6 +16,7 @@
   <body>
     <header>
       <nav>
+        <!-- Hier ist die Navigation, damit man die anderen seiten auch erreicht -->
         <a class="naver" href="./index.html">Über mich</a>
         <a class="naver" href="./faehigkeiten.html">Fähigkeiten</a>
         <a class="persona" href="./index.html">Persona</a>
@@ -25,12 +27,15 @@
     <div class="content-container">
       <span><h1>Novak Djuric</h1></span>
       <img src="./novak1.png" alt="Nobak" class="novak1" />
+
+      <!-- Hier ist eine Liste von meinen Informationen -->
       <ul>
         <li>Alter: 16</li>
         <li>Geburtsort: Herisau, Schweiz</li>
         <li>Beruf: Applikationsentwickler</li>
         <li>Betrieb: Bbc St.Gallen</li>
       </ul>
+      <!-- Hier ist die definition von Novak -->
       <p>
         Seit 16 Jahre bin ich schon in der Schweiz aufgewachsen, momentan
         Arbeite ich als<br />
